samples/_failures_safe/1761796793_7be928_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_375614d4.c: In function ‘main’:
./samples/SAFE/__tmp_375614d4.c:152:17: error: expected declaration or statement at end of input
  152 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_375614d4.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_375614d4.c:152:17: error: expected declaration or statement at end of input
